--- a/index.html
+++ b/index.html
@@ -1208,7 +1208,7 @@
     <!-- Footer -->
     <footer id="about" class="reveal-on-scroll">
         <div class="footer-content">
-            <p class="footer-text">Test Project</p>
+            <p class="footer-text">Note: this website is just for test </p>
             <p class="creator">Created by ALI ARIF MUHAMMED</p>
         </div>
     </footer>
