--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ALPHA - Next-Gen AI Directory</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         /* Custom scrollbar for chatbots when expanded */
         .category[data-category="chatbots"].expanded .tools-container {
@@ -744,6 +744,6 @@
         </div>
     </footer>
 
-    <script src="../ali.js"></script>
+    <script src="ali.js"></script>
 </body>
 </html>
